[package]
name = "tundra"
version = "0.1.0"
authors = ["Zachary Churchill <zacharyachurchill@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4.2", features = ["svg", "canvas", "pure"] }
iced_audio = "0.8.0"
rodio = "0.15.0"
svg = "0.10.0"
walkdir = "2.3.2"
fuzzy-matcher = "0.3.7"
futures = "0.3.21"
async-std = "1.12.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
