[package]
name = "tundra"
version = "0.1.0"
authors = ["Zachary Churchill <zacharyachurchill@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["svg", "canvas"] }
iced_futures = "0.6.0"
iced_native = "0.10.3"
iced_audio = "0.11.0"
rodio = "0.17.1"
svg = "0.13.1"
walkdir = "2.3.3"
fuzzy-matcher = "0.3.7"
futures = "0.3.28"
async-std = "1.12.0"
iced_aw = "0.5.0"
dirs = "5.0.0"
bincode = "1.3.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
